Prep for build 24478

--- a/Changes
+++ b/Changes
@@ -4,9 +4,12 @@
 
 == Unreleased Changes
 
+== Changes for 24478 2010-10-15
+
 * Fix Trac 796, 798, 799, 802, 804
 * Underlying GemStone 3.0 system changes
-*   Fix Gemstone bugs 40961, 40976,40952, 40981, 40898, 40999, 41002
+*   Fix Gemstone bugs 40086, 40609, 40861, 40866, 40883, 40898, 40909, 40933, 40944, 
+    40952, 40961, 40971, 40976, 40898, 40981, 40984, 40994, 40999, 41002, 41005
 *   Fixes to almost OutOfMemory handling in IndexManager 
 
 == Changes for 24407 2010-10-01
