--- a/Changes
+++ b/Changes
@@ -5,6 +5,8 @@
 == Unreleased Changes
 
 * In Underlying GemStone 3.0 system, rename RClass to Metaclass3; fix 40985.
+* Added demo of Smalltalk code browser (examples/misc)
+* Added Rake support for running .gs files (rake maglev:input_file foo.gs)
 
 == Changes for 24479 2010-10-15
 
